<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/number"
                    android:text="@string/jump_number" />

                <EditText
                    android:id="@+id/number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    android:importantForAutofill="no">

                    <requestFocus />
                </EditText>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/date"
                    android:text="@string/date" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:importantForAutofill="no" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/jump_type"
                    android:text="@string/jump_type" />

                <org.openskydive.altidroid.ui.SimpleAutoCompleteEditView
                    android:id="@+id/jump_type"
                    style="@android:style/Widget.Material.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords|textAutoComplete"
                    android:scrollHorizontally="true"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/drop_zone"
                    android:text="@string/drop_zone" />

                <org.openskydive.altidroid.ui.SimpleAutoCompleteEditView
                    android:id="@+id/drop_zone"
                    style="@android:style/Widget.Material.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords|textAutoComplete"
                    android:scrollHorizontally="true"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/equipment"
                    android:text="@string/equipment" />

                <org.openskydive.altidroid.ui.SimpleAutoCompleteEditView
                    android:id="@+id/equipment"
                    style="@android:style/Widget.Material.AutoCompleteTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords|textAutoComplete"
                    android:scrollHorizontally="true"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/aircraft"
                    android:text="@string/aircraft" />

                <org.openskydive.altidroid.ui.SimpleAutoCompleteEditView
                    android:id="@+id/aircraft"
                    style="@android:style/Widget.Material.AutoCompleteTextView"

                    android:layout_height="wrap_content"
                    android:inputType="text|textCapWords|textAutoComplete"
                    android:scrollHorizontally="true"
                    android:selectAllOnFocus="true" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:baselineAligned="true" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/exit_at"
                    android:text="@string/exit_at" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAlignedChildIndex="0" >

                    <EditText
                        android:id="@+id/exit_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/exit_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_ft_short" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/deploy_at"
                    android:text="@string/deploy_at" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAlignedChildIndex="0" >

                    <EditText
                        android:id="@+id/deploy_at"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/deploy_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_ft_short" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/delay"
                    android:text="@string/delay" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:baselineAlignedChildIndex="0" >

                    <EditText
                        android:id="@+id/delay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:inputType="number"
                        android:importantForAutofill="no" />

                    <TextView
                        android:id="@+id/delay_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/units_s_short" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:measureWithLargestChild="false" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:labelFor="@id/comments"
                    android:text="@string/comments" />

                <EditText
                    android:id="@+id/comments"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text|textMultiLine"
                    android:importantForAutofill="no" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>